--- a/cool-domains/package.json
+++ b/cool-domains/package.json
@@ -14,6 +14,8 @@
     "hardhat": "^2.19.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.0"
+    "@openzeppelin/contracts": "^5.0.0",
+    "dotenv": "^16.3.1",
+    "dotenv-extended": "^2.9.0"
   }
 }
